# MyCopilot

./: .gitignore  CMakeLists.txt  README.md  SpeechWorker.cpp  SpeechWorker.h  build.bat  main.cpp  speech2text.cpp
